syntax = "proto3";

package msg;

// 消息ID
enum MessageID {
    MSG_Ping = 0;
    MSG_Pong = 1;
    MSG_Login_C2S = 2;
    MSG_Login_S2C = 3;
    MSG_Logout_C2S = 4;
    MSG_Logout_S2C = 5;
    MSG_JoinRoom_C2S = 6;
    MSG_JoinRoom_S2C = 7;
    MSG_EnterRoom_S2C = 8;
    MSG_PlayerAction_C2S = 9;
    MSG_PlayerAction_SC2 = 10;
    MSG_ActionResult_C2S = 11;
    MSG_ActionResult_S2C = 12;
    MSG_ProgressBar_C2S = 13;
    MSG_ProgressBar_S2C = 14;
    MSG_DownLuckyBag_S2C = 15;
    MSG_ReCreatGold_S2C = 16;
    MSG_GetRewards_S2C = 17;
    MSG_PickUpGold_C2S = 18;
    MSG_PickUpGold_S2C = 19;
    MSG_ChangeRoomCfg_C2S = 20;
    MSG_ChangeRoomCfg_S2C = 21;
    MSG_ErrorMsg_S2C = 22;
}

message Ping {
}

message Pong {
    int64 serverTime = 1; // 服务器时间戳
}

message PlayerInfo {
    string Id = 1;
    string nickName = 2;
    string headImg = 3;
    double account = 4;
}

message Login_C2S {
    string Id = 1;
    string PassWord = 2;
    string Token = 3;
}

message Login_S2C {
    PlayerInfo playerInfo = 1;
}

message Logout_C2S {
}

message Logout_S2C {
}


message RoomData {
    string roomId = 1;
    string cfgId = 2;
    PlayerInfo playerInfo = 3;
    repeated string coinList = 4;
}

message JoinRoom_C2S {
    string cfg = 1;
}

message JoinRoom_S2C {
    RoomData roomData = 1;
}

message EnterRoom_S2C {
    RoomData roomData = 1;
    bool isChange = 2;
    repeated coordinate coordinates = 3;
}

message PlayerAction_C2S {
    double downBet = 1; // 下注金额
    repeated coordinate coordinates = 2;
}

message PlayerAction_S2C {
    bool luckyBag = 1; // 福袋
    string coin = 2;
    repeated string coinList = 3;
}

// 行动结算返回
message ActionResult_C2S {
    repeated string coinList = 1;
    repeated coordinate coordinates = 2;
}

message ActionResult_S2C {
    double account = 1; // 玩家最新金额
}

message ProgressBar_C2S {
    int32 betNum = 1;
    string coin = 2;
}

message ProgressBar_S2C {
    int32 proBar = 1;
}

message ThreePig {
    double PigSuccess = 1; // 中奖小猪
    double PigLoser_1 = 2; // 未中奖小猪
    double PigLoser_2 = 3; // 未中奖小猪
}

// 获奖小游戏
message GetRewards_S2C {
    int32 rewardsNum = 1;
    double getMoney = 2;
    ThreePig luckyPig = 3;
    double account = 4; // 玩家最新金额
}

// 福袋掉落
message DownLuckyBag_S2C {
    int32 luckyBag1 = 1;
    int32 luckyBag2 = 2;
    repeated string coinList = 3;
    double money = 4;
}

// 重新生成金币
message ReCreatGold_S2C {
    repeated string coinList = 1;
}

// 财神接金币
message PickUpGold_C2S {
    int32 betNum = 1;
}

// 返回金额和倍数
message PickUpGold_S2C {
    double money = 1;
    int32 rate = 2;
    double account = 3; // 玩家最新金额
}

message coordinate {
    repeated string location = 1;
}

// 修改房间区分配置
message ChangeRoomCfg_C2S {
    // 保存的config
    string config = 1;
    // 二维数组
    repeated coordinate coordinates = 2;
    // 切换的config
    string changeCfg = 3;
}

// 返回配置信息
message ChangeRoomCfg_S2C {
    bool isChange = 1;
    repeated string coinList = 2;
    repeated coordinate coordinates = 3;
}

message ErrorMsg_S2C {
    string msgData = 1; // 错误消息
}
